--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,5 +3,19 @@ name = "github-trend-predictor"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.14"
-dependencies = []
+requires-python = ">=3.10,<3.12"
+dependencies = [
+    "anthropic>=0.75.0",
+    "gradio>=6.2.0",
+    "great-expectations>=1.10.0",
+    "hopsworks>=4.6.0",
+    "matplotlib>=3.10.8",
+    "pandas>=2.3.3",
+    "pydantic>=2.12.5",
+    "pydantic-settings>=2.12.0",
+    "python-dotenv>=1.2.1",
+    "requests>=2.32.5",
+    "scikit-learn>=1.7.2",
+    "seaborn>=0.13.2",
+    "xgboost>=3.1.2",
+]
