--- a/.github/workflows/repos-daily.yml
+++ b/.github/workflows/repos-daily.yml
@@ -34,3 +34,11 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           uv run daily-features
+
+      - name: commit and push data files
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add data/
+          git diff --staged --quiet || git commit -m "chore: update daily features data [skip ci]"
+          git push
