--- a/.github/workflows/repos-daily.yml
+++ b/.github/workflows/repos-daily.yml
@@ -16,6 +16,9 @@ jobs:
     steps:
       - name: checkout repo content
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0
 
       - name: setup python
         uses: actions/setup-python@v5
@@ -40,5 +43,9 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add data/
-          git diff --staged --quiet || git commit -m "chore: update daily features data [skip ci]"
-          git push
+          if ! git diff --staged --quiet; then
+            git commit -m "chore: update daily features data [skip ci]"
+            git push origin HEAD:${GITHUB_REF#refs/heads/}
+          else
+            echo "No changes to commit"
+          fi
