--- a/.github/workflows/repos-daily.yml
+++ b/.github/workflows/repos-daily.yml
@@ -43,9 +43,5 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add data/
-          if ! git diff --staged --quiet; then
-            git commit -m "chore: update daily features data [skip ci]"
-            git push origin HEAD:${GITHUB_REF#refs/heads/}
-          else
-            echo "No changes to commit"
-          fi
+          git diff --staged --quiet || git commit -m "chore: update daily features data [skip ci]"
+          git push
