--- a/.github/workflows/repos-daily.yml
+++ b/.github/workflows/repos-daily.yml
@@ -35,6 +35,7 @@ jobs:
         env:
           HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          HOPS_PROJECT_NAME: ${{ secrets.HOPS_PROJECT_NAME }}
         run: |
           uv run daily-features
 
