--- a/.github/workflows/inference-daily.yml
+++ b/.github/workflows/inference-daily.yml
@@ -16,11 +16,14 @@ jobs:
     if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
 
     permissions:
-      contents: read
+      contents: write
 
     steps:
       - name: checkout repo content
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0
 
       - name: setup python
         uses: actions/setup-python@v5
@@ -39,6 +42,14 @@ jobs:
           HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY }}
         run: |
           uv run predict
+
+      - name: commit and push predictions
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add predictions.json
+          git diff --staged --quiet || git commit -m "chore: update daily predictions [skip ci]"
+          git push
 
       - name: upload predictions artifact
         if: success()
